--- a/src/style.css
+++ b/src/style.css
@@ -1,74 +1,118 @@
 .container{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(#136, #170, #237);
+width: 100%;
+min-height: 100vh;
+background-color: rgb(19, 102, 237);
+display: flex;
+justify-content: center;
+align-items: center;
 }
+
 .weather{
-    width: 380px;
-    padding: 30px;
-    border-radius: 10px;
-    margin: 50px auto;
-    text-align: center;
-    color: white;
-    background: linear-gradient(rgb(106, 19, 136) , rgb(53, 53, 219));
+max-width: 380px;
+width: 90%;
+padding: 30px;
+border-radius: 10px;
+text-align: center;
+color: white;
+background: linear-gradient(rgb(106, 19, 136) , rgb(53, 53, 219));
 }
+
 .search{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: space-between;
+margin-bottom: 20px;
 }
+
 .search input{
-    border: none;
-    outline: 0;
-    padding: 12px 25px;
-    font-size: 18px;
-    background-color: white ;
-    color: black;
-    border-radius: 30px;
-    flex: 1;
-    margin-right: 12px;
+border: none;
+outline: 0;
+padding: 12px 25px;
+font-size: 18px;
+background-color: white ;
+color: black;
+border-radius: 30px;
+margin-right: 12px;
+flex: 1 1 200px;
+margin-bottom: 10px;
 }
+
 .search button{
-    border: none;
-    outline: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    ;
+border: none;
+outline: 0;
+width: 50px;
+height: 50px;
+border-radius: 50%;
+cursor: pointer;
 }
+
 .search button img{
-    width: 30px;
+width: 30px;
 }
+
 .weatherInfo img{
-    width: 100px;
+width: 100px;
+max-width: 100%;
 }
+
+.weatherInfo .icon{
+margin-top: 20px;
+width: 150px;
+height: 150px;
+background-color: rgb(19, 102, 237);
+}
+
 .weatherInfo h1{
-    font-size: 50px;
+font-size: 50px;
 }
+
 .weatherInfo h2{
-    font-size: 40px;
-    font-weight: 200;
-    margin-top: -40px;
+font-size: 40px;
+font-weight: 200;
+margin-top: -40px;
 }
 
 .details {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 20px;
-    margin-top: 50px;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: space-between;
+padding: 0px 20px;
 }
 
 .details .col{
-    display: flex;
-    align-items: center;
-    text-align: left;
+display: flex;
+align-items: center;
+text-align: left;
+margin-bottom: 10px;
 }
+
 .details .col img{
 width: 50px;
 margin-right: 10px;
 }
+
+.error{
+    color: rgb(247, 7, 7);
+}
+
 .humidity, .wind {
-    font-size: 27px;
+font-size: 27px;
+}
+
+@media screen and (min-width: 768px) {
+.weather {
+max-width: 800px;
+}
+
+.search input {
+    flex: 1;
+    margin-bottom: 0;
+    margin-right: 10px;
+}
+
+.details .col {
+    margin-right: 20px;
+}
 }
